//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role UserRole [not null, default: 'STUDENT']
  Student Student
  UniversitySection UniversitySection
  universitySectionId String
}

Table Student {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
  Requisition Requisition [not null]
}

Table UniversitySection {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  admins User [not null]
  services Service [not null]
  requisitions Requisition [not null]
}

Table Service {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  universitySection UniversitySection [not null]
  universitySectionId String [not null]
  requisitions Requisition [not null]
}

Table Requisition {
  id String [pk]
  title String [not null]
  body String [not null]
  status RequisitionStatus [not null, default: 'OPENED']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  student Student [not null]
  studentId String [not null]
  service Service [not null]
  serviceId String [not null]
  universitySection UniversitySection [not null]
  universitySectionId String [not null]
}

Enum UserRole {
  STUDENT
  ADMIN
}

Enum RequisitionStatus {
  OPENED
  CONCLUDED
}

Ref: User.universitySectionId > UniversitySection.id

Ref: Student.userId - User.id [delete: Cascade]

Ref: Service.universitySectionId > UniversitySection.id [delete: Cascade]

Ref: Requisition.studentId > Student.id [delete: Cascade]

Ref: Requisition.serviceId > Service.id [delete: Cascade]

Ref: Requisition.universitySectionId > UniversitySection.id